Added tesco product search API, UI changes in Reviews and edited its controller

--- a/app/views/branchinfos/_form.html.erb
+++ b/app/views/branchinfos/_form.html.erb
@@ -68,7 +68,7 @@
     </div>
   </div>
 
-  <div class="actions">
+  <div class="btn alert alert-secondary col-sm-4" style="background-color: #eee;">
     <%= f.submit %>
   </div>
 <% end %>
