--- a/app/views/productinfos/_form.html.erb
+++ b/app/views/productinfos/_form.html.erb
@@ -69,7 +69,7 @@
     </div>
   </div>
 
-  <div class="actions">
+  <div class="btn alert alert-danger col-sm-4" style="background-color: #eee;">
     <%= f.submit %>
   </div>
 <% end %>
