--- a/app/views/home/Index.html.erb
+++ b/app/views/home/Index.html.erb
@@ -68,6 +68,28 @@
         </tr>
       <% end %>
     </table>
+    <% elsif @productList.empty? %>
+    </br>
+      <h6>Sorry, the product you searched for is not available in our database.</h6>
+    <p>Please check below the price from Tesco. Please check for the product at your nearest Tesco Branch </p>
+
+    <table class="table table-striped table-bordered">
+      <tr>
+        <th></th>
+        <th>Product Name</th>
+        <th>Product Price</th>
+      </tr>
+      </br>
+      <% for product in @tescoProduct %>
+        <tr>
+          <td><%= image_tag product["image"]  %></td>
+          <td><%= product["name"] %></td>
+          <td><%= product["price"] %></td>
+        </tr>
+      <% end %>
+
+    </table>
+
   <% end %>
 
   </br>
