--- a/app/views/reviews/index.html.erb
+++ b/app/views/reviews/index.html.erb
@@ -1,41 +1,48 @@
-<p id="notice"><%= notice %></p>
+<!DOCTYPE html>
+<html>
 
-<h1>Reviews</h1>
+<head>
+  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css">
+  <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js"></script>
+  <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js"></script>
+</head>
 
-<table>
+<body>
+<div class ="container">
+  </br>
+
+  <p id="notice"><%= notice %></p>
+
+  <h1>Reviews</h1>
+
+  <table class="table table-striped table-bordered" style="width: 50%">
   <thead>
     <tr>
       <th>Comment</th>
       <th>Rating</th>
-      <th>User</th>
-      <th>Productinfo</th>
-      <th colspan="3"></th>
-    </tr>
+  </tr>
   </thead>
 
-<%@productid  %>
-
   <tbody>
-    <% @reviews.each do |review| %>
-      <tr>
-        <td><%= review.comment %></td>
-        <td><%= review.rating %></td>
-        <td><%= review.user_id %></td>
-        <td><%= review.productinfo_id %></td>
-        <%@productid = review.productinfo_id %>
-        <td><%= link_to 'Show', review %></td>
-        <td><%= link_to 'Edit', edit_review_path(review) %></td>
-        <td><%= link_to 'Destroy', review, method: :delete, data: { confirm: 'Are you sure?' } %></td>
-      </tr>
-    <% end %>
+  <% @reviews.each do |review| %>
+    <tr>
+      <td><%= review.comment %></td>
+      <td><%= review.rating %></td>
+      <td class="btn badge badge-success"><%= link_to 'Edit', edit_review_path(review) %></td>
+      <td class="btn badge badge-danger"><%= link_to 'Destroy', review, method: :delete, data: { confirm: 'Are you sure?' } %></td>
+    </tr>
+  <% end %>
   </tbody>
-</table>
+  </table>
 
-<br>
-
-
-
-<%= link_to "New Review", {:controller => "reviews", :action => "new",
-                                :productinfo_id => @productid}%>
+  <br>
+  <div class="btn alert alert-info col-sm-2" style="background-color: #eee;">
+    <%= link_to "New Review", {:controller => "reviews", :action => "new",
+                               :productinfo_id => @productinfo.id}%>
+  </div>
+</div>
+</body>
+</html>
 
 
