--- a/app/views/branchinfos/index.html.erb
+++ b/app/views/branchinfos/index.html.erb
@@ -32,11 +32,11 @@
           <td><%= br.phoneno %></td>
           <td><%= br.branchincharge %></td>
           <td><%= br.contactno %></td>
-          <td class="btn badge badge-success"><%= link_to 'Show Products',
+          <td class="btn btn-outline-success"><%= link_to 'Show Products',
                           {:controller => "productinfos", :action => "index",
                            :branchinfo_id => br.id, :storeinfo_id => br.storeinfo_id}%></td>
-          <td class="btn badge badge-success"><%= link_to'Edit', edit_branchinfo_path(br) %></td>
-          <td class="btn badge badge-danger"><%= link_to'Destroy', branchinfo_path(br),
+          <td class="btn btn-outline-success"><%= link_to'Edit', edit_branchinfo_path(br) %></td>
+          <td class="btn btn-outline-danger"><%= link_to'Destroy', branchinfo_path(br),
                          :confirm =>'Are you sure?',
                          :method => :delete, data: { confirm: 'Are you sure?' } %></td>
         <% end %>
