--- a/app/views/home/Index.html.erb
+++ b/app/views/home/Index.html.erb
@@ -58,8 +58,8 @@
             <% end %>
           </td>
           <% if current_user.admin? || product.user_id == current_user.id %>
-            <td class="btn badge badge-success"><%= link_to'Edit', edit_productinfo_path(product) %></td>
-            <td class="btn badge badge-danger"><%= link_to'Destroy', productinfo_path(product),
+            <td><%= link_to'Edit', edit_productinfo_path(product) %></td>
+            <td><%= link_to'Destroy', productinfo_path(product),
                            :confirm =>'Are you sure?',
                            :method => :delete, data: { confirm: 'Are you sure?' } %></td>
             <%else %>
@@ -80,12 +80,16 @@
         <th>Product Price</th>
       </tr>
       </br>
-      <% for product in @tescoProduct %>
-        <tr>
-          <td><%= image_tag product["image"]  %></td>
-          <td><%= product["name"] %></td>
-          <td><%= product["price"] %></td>
-        </tr>
+      <% if @tescoProduct.empty? %>
+        <h6>Sorry, the product you searched for is not available in Tesco as well.</h6>
+      <% else %>
+        <% for product in @tescoProduct %>
+          <tr>
+            <td><%= image_tag product["image"]  %></td>
+            <td><%= product["name"] %></td>
+            <td><%= product["price"] %></td>
+          </tr>
+        <% end %>
       <% end %>
 
     </table>
@@ -99,8 +103,8 @@
       <% @productHash.each do |key, value| %>
         <tr>
           <td style="width: 50%"><%= key %></td>
-          <td class="btn badge badge-success"><%= link_to'Show', {:controller => "compare", :action => "index",
-                                                                                      :pdName => key, :pdID => value } %></td>
+          <td class = "btn btn-outline-success"><%= link_to'Show', {:controller => "compare", :action => "index",
+                                  :pdName => key, :pdID => value } %></td>
         </tr>
       <% end %>
     </table>
