--- a/app/views/storeinfos/index.html.erb
+++ b/app/views/storeinfos/index.html.erb
@@ -41,11 +41,11 @@
           <td><%= storeinfo.storeincharge %></td>
           <td><%= storeinfo.contactno %></td>
           <div class="col-sm-1">
-            <td class="btn badge badge-success"><%= link_to 'Show Branches',
+            <td class="btn btn-outline-success"><%= link_to 'Show Branches',
                                                             {:controller => "branchinfos", :action => "index", :storeinfo_id => storeinfo.id}%></td>
           </div>
-          <td class="btn badge badge-success"><%= link_to 'Edit', edit_storeinfo_path(storeinfo) %></td>
-          <td class="btn badge badge-danger"><%= link_to 'Destroy', storeinfo, method: :delete, data: { confirm: 'Are you sure?' } %></td>
+          <td class="btn btn-outline-success"><%= link_to 'Edit', edit_storeinfo_path(storeinfo) %></td>
+          <td class="btn btn-outline-danger"><%= link_to 'Destroy', storeinfo, method: :delete, data: { confirm: 'Are you sure?' } %></td>
         <% end %>
       </tr>
     <% end %>
